# rang

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  meson.build
include/: rang.hpp
test/: colorTest.cpp  colortest.cpp  envTermMissing.cpp  meson.build  test.cpp  visualTest.cpp
test_package/: meson.build
